--- a/src/particlesjs-config.json
+++ b/src/particlesjs-config.json
@@ -8,7 +8,7 @@
       }
     },
     "color": {
-      "value": "#222"
+      "value": "#fff"
     },
     "shape": {
       "type": "circle",
@@ -26,7 +26,7 @@
       }
     },
     "opacity": {
-      "value": 0.5,
+      "value": 0.4,
       "random": false,
       "anim": {
         "enable": false,
@@ -49,7 +49,7 @@
       "enable": true,
       "distance": 130,
       "color": "#ffffff",
-      "opacity": 0.2,
+      "opacity": 0.3,
       "width": 1
     },
     "move": {
