--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://Enderase-org.github.io/Enderase",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,13 +12,14 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-image-gallery": "^1.2.7",
+    "react-responsive": "^9.0.0-beta.6",
     "react-scripts": "5.0.0",
     "react-tsparticles": "^1.40.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
